# godot-vigem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct
project/: EncodedButton.gd  EncodedButton.gd.uid  project.godot  xbox_360.tscn  xbox_controller.svg.import
project/addons/godot-vigem/: gdvigem.gdextension  gdvigem.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
src/: example_class.cpp  example_class.h  gamepad_emulator.cpp  gamepad_emulator.h  register_types.cpp  register_types.h  vigem_device.cpp  vigem_device.h  vigem_device_ds4.cpp  vigem_device_x360.cpp  vigem_server.cpp  vigem_server.h
